--- a/RDF/RDF_analysis_4DSTEM_SiOx.ipynb
+++ b/RDF/RDF_analysis_4DSTEM_SiOx.ipynb
@@ -45,22 +45,19 @@
    },
    "outputs": [],
    "source": [
-    "B_AF_sqr = tifffile.imread(\"./setting/AFFs_300keV/05_Boron_300keV_fs_square_0.005A.tif\").squeeze()\n",
-    "B_AF = np.sqrt(B_AF_sqr)\n",
-    "B_AF /= np.max(B_AF)\n",
-    "C_AF_sqr = tifffile.imread(\"./setting/AFFs_300keV/06_Carbon_300keV_fs_square_0.005A.tif\").squeeze()\n",
-    "C_AF = np.sqrt(C_AF_sqr)\n",
-    "C_AF /= np.max(C_AF)\n",
-    "N_AF_sqr = tifffile.imread(\"./setting/AFFs_300keV/07_Nitrogen_300keV_fs_square_0.005A.tif\").squeeze()\n",
-    "N_AF = np.sqrt(N_AF_sqr)\n",
-    "N_AF /= np.max(N_AF)\n",
-    "O_AF_sqr = tifffile.imread(\"./setting/AFFs_300keV/08_Oxygen_300keV_fs_square_0.005A.tif\").squeeze()\n",
+    "Si_AF_sqr = tifffile.imread(\"./setting/AFFs_200keV/14_Silicon_200keV_fs_square_0.005A.tif\").squeeze()\n",
+    "Si_AF = np.sqrt(Si_AF_sqr)\n",
+    "Si_AF /= np.max(Si_AF)\n",
+    "O_AF_sqr = tifffile.imread(\"./setting/AFFs_200keV/08_Oxygen_200keV_fs_square_0.005A.tif\").squeeze()\n",
     "O_AF = np.sqrt(O_AF_sqr)\n",
     "O_AF /= np.max(O_AF)\n",
     "\n",
+    "Si_atp = 1/3\n",
+    "O_atp = 2/3\n",
+    "\n",
     "k_scale = 0.005 # Angstrom\n",
-    "s = np.arange(0, k_scale*len(B_AF), k_scale)\n",
-    "print(len(s))"
+    "s = np.arange(0, k_scale*len(Si_AF), k_scale)\n",
+    "print(len(s), s[-1])"
    ]
   },
   {
@@ -135,29 +132,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interpolation = interp1d(s, B_AF, kind=\"cubic\")\n",
-    "NB_AF = interpolation(k_list)\n",
-    "NB_AF /= np.max(NB_AF)\n",
-    "\n",
-    "interpolation = interp1d(s, C_AF, kind=\"cubic\")\n",
-    "NC_AF = interpolation(k_list)\n",
-    "NC_AF /= np.max(NC_AF)\n",
-    "\n",
-    "interpolation = interp1d(s, N_AF, kind=\"cubic\")\n",
-    "NN_AF = interpolation(k_list)\n",
-    "NN_AF /= np.max(NN_AF)\n",
+    "interpolation = interp1d(s, Si_AF, kind=\"cubic\")\n",
+    "NSi_AF = interpolation(k_list)\n",
+    "NSi_AF /= np.max(NSi_AF)\n",
     "\n",
     "interpolation = interp1d(s, O_AF, kind=\"cubic\")\n",
     "NO_AF = interpolation(k_list)\n",
     "NO_AF /= np.max(NO_AF)\n",
     "\n",
-    "AF_mean = NB_AF*B_atp + NC_AF*C_atp + NN_AF*N_atp + NO_AF*O_atp\n",
+    "AF_mean = (NSi_AF*Si_atp +  NO_AF*O_atp)\n",
     "print(len(AF_mean))\n",
     "\n",
     "AF_mean_square = AF_mean**2\n",
     "print(len(AF_mean_square))\n",
     "\n",
-    "AF_square_mean = (NB_AF*B_atp)**2 + (NC_AF*C_atp)**2 + (NN_AF*N_atp)**2 + (NO_AF*O_atp)**2\n",
+    "AF_square_mean = NSi_AF*Si_atp**2 + NO_AF*O_atp**2\n",
     "print(len(AF_square_mean))"
    ]
   },
@@ -210,7 +199,6 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(8, 6))\n",
-    "\n",
     "ax.plot(k_list, np.mean(rot_dp_data, axis=(0, 1)), 'k-')\n",
     "ax.plot(k_list, AF_mean_square, 'r-')\n",
     "ax.plot(k_list, AF_square_mean, 'g+')\n",
