--- a/FEM/fem_analysis_revised.ipynb
+++ b/FEM/fem_analysis_revised.ipynb
@@ -477,7 +477,7 @@
    "outputs": [],
    "source": [
     "# save (radial average, 3D)\n",
-    "tifffile.imsave(raw_adr[:-4]+\"_radial_avg_radial.tif\", radial_avg_stack)"
+    "tifffile.imsave(raw_adr[:-4]+\"_radial_avg.tif\", radial_avg_stack)"
    ]
   },
   {
@@ -570,7 +570,7 @@
    "outputs": [],
    "source": [
     "# save (radial variance, 3D)\n",
-    "tifffile.imsave(raw_adr[:-4]+\"_radial_var_radial.tif\", radial_var_stack)"
+    "tifffile.imsave(raw_adr[:-4]+\"_radial_var.tif\", radial_var_stack)"
    ]
   },
   {
