--- a/RDF/RDF_analysis_4DSTEM.ipynb
+++ b/RDF/RDF_analysis_4DSTEM.ipynb
@@ -81,10 +81,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load a data (DM)\n",
-    "rot_dp = hys.load(raw_adr)\n",
-    "print(rot_dp)\n",
-    "rot_dp_data = rot_dp.data.copy()\n",
+    "# Load a data\n",
+    "rot_dp = tifffile.imread(raw_adr)\n",
+    "print(rot_dp.shape)\n",
+    "rot_dp_data = rot_dp.copy()\n",
     "print(rot_dp_data.shape)\n",
     "n_dim = len(rot_dp_data.shape)\n",
     "print(n_dim)"
