--- a/RDF/RDF_analysis_4DSTEM_SiOx.ipynb
+++ b/RDF/RDF_analysis_4DSTEM_SiOx.ipynb
@@ -45,10 +45,12 @@
    },
    "outputs": [],
    "source": [
-    "Si_AF_sqr = tifffile.imread(\"./setting/AFFs_200keV/14_Silicon_200keV_fs_square_0.005A.tif\").squeeze()\n",
+    "Si_AF_sqr = tifffile.imread(\"./setting/AFFs_300keV/14_Silicon_300keV_fs_square_0.005A.tif\").squeeze()\n",
+    "Si_AF_sqr = Si_AF_sqr[:1000]\n",
     "Si_AF = np.sqrt(Si_AF_sqr)\n",
     "Si_AF /= np.max(Si_AF)\n",
-    "O_AF_sqr = tifffile.imread(\"./setting/AFFs_200keV/08_Oxygen_200keV_fs_square_0.005A.tif\").squeeze()\n",
+    "O_AF_sqr = tifffile.imread(\"./setting/AFFs_300keV/08_Oxygen_300keV_fs_square_0.005A.tif\").squeeze()\n",
+    "O_AF_sqr = O_AF_sqr[:1000]\n",
     "O_AF = np.sqrt(O_AF_sqr)\n",
     "O_AF /= np.max(O_AF)\n",
     "\n",
@@ -56,7 +58,7 @@
     "O_atp = 2/3\n",
     "\n",
     "k_scale = 0.005 # Angstrom\n",
-    "s = np.arange(0, k_scale*len(Si_AF), k_scale)\n",
+    "s = np.arange(0, k_scale*len(Si_AF), k_scale)[:1000]\n",
     "print(len(s), s[-1])"
    ]
   },
@@ -94,10 +96,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scale = [0.2701, 0.2701, 0.01722]\n",
+    "scale = [0.4325, 0.4325, 0.02677]\n",
     "origin = [0, 0, 0]\n",
     "unit = ['nm', 'nm', '1/A']\n",
-    "size = [128, 128, 90]"
+    "size = rot_dp_data.shape"
    ]
   },
   {
@@ -309,11 +311,11 @@
     "st = {\"description_width\": \"initial\"}\n",
     "y_wg = pyw.BoundedIntText(value=0, min=0, max=size[1]-1, description=\"y position\", style=st)\n",
     "x_wg = pyw.BoundedIntText(value=0, min=0, max=size[0]-1, description=\"x position\", style=st)\n",
-    "N_wg = pyw.BoundedFloatText(value=1.0, min=0.00001, step=0.001, description=\"N\", style=st)\n",
+    "N_wg = pyw.BoundedFloatText(value=1.0, min=0.0001, step=0.0001, description=\"N\", style=st)\n",
     "N_manual = pyw.Checkbox(value=True, description=\"use the fitted value of N\")\n",
     "fit_range_wg = pyw.IntRangeSlider(value=[70, 80], \n",
     "                                  min=40, max=size[n_dim-1]-1, description=\"N fitting range\")\n",
-    "alpha_wg = pyw.FloatText(value=0.0, step=0.000001, description=\"alpha\", style=st)\n",
+    "alpha_wg = pyw.FloatText(value=0.0, step=0.0001, description=\"alpha\", style=st)\n",
     "filter_wg = pyw.BoundedIntText(value=0, min=0, max=len(filter_types)-1, description=\"filter\", style=st)\n",
     "filter_cut_wg = pyw.BoundedFloatText(value=0.8, min=0.0, max=1.0, step=0.05, description=\"filter high cut\", style=st)\n",
     "full_wg = pyw.Checkbox(value=True, description=\"show the full range of RDF\")\n",
