--- a/RDF/RDF_analysis_4DSTEM_SiOx.ipynb
+++ b/RDF/RDF_analysis_4DSTEM_SiOx.ipynb
@@ -45,20 +45,27 @@
    },
    "outputs": [],
    "source": [
+    "lim_dim = 800\n",
+    "\n",
     "Si_AF_sqr = tifffile.imread(\"./setting/AFFs_300keV/14_Silicon_300keV_fs_square_0.005A.tif\").squeeze()\n",
-    "Si_AF_sqr = Si_AF_sqr[:1000]\n",
+    "Si_AF_sqr = Si_AF_sqr[:lim_dim]\n",
     "Si_AF = np.sqrt(Si_AF_sqr)\n",
-    "Si_AF /= np.max(Si_AF)\n",
+    "\n",
     "O_AF_sqr = tifffile.imread(\"./setting/AFFs_300keV/08_Oxygen_300keV_fs_square_0.005A.tif\").squeeze()\n",
-    "O_AF_sqr = O_AF_sqr[:1000]\n",
+    "O_AF_sqr = O_AF_sqr[:lim_dim]\n",
     "O_AF = np.sqrt(O_AF_sqr)\n",
-    "O_AF /= np.max(O_AF)\n",
+    "\n",
+    "tmp = np.max(Si_AF)\n",
+    "Si_AF /= tmp\n",
+    "O_AF /= tmp\n",
+    "\n",
+    "print(np.max(Si_AF), np.max(O_AF))\n",
     "\n",
     "Si_atp = 1/3\n",
     "O_atp = 2/3\n",
     "\n",
     "k_scale = 0.005 # Angstrom\n",
-    "s = np.arange(0, k_scale*len(Si_AF), k_scale)[:1000]\n",
+    "s = np.arange(0, k_scale*len(Si_AF), k_scale)[:lim_dim]\n",
     "print(len(s), s[-1])"
    ]
   },
@@ -136,11 +143,9 @@
    "source": [
     "interpolation = interp1d(s, Si_AF, kind=\"cubic\")\n",
     "NSi_AF = interpolation(k_list)\n",
-    "NSi_AF /= np.max(NSi_AF)\n",
     "\n",
     "interpolation = interp1d(s, O_AF, kind=\"cubic\")\n",
     "NO_AF = interpolation(k_list)\n",
-    "NO_AF /= np.max(NO_AF)\n",
     "\n",
     "AF_mean = (NSi_AF*Si_atp +  NO_AF*O_atp)\n",
     "print(len(AF_mean))\n",
