--- a/imaging/virtual_imaging_4D_STEM.ipynb
+++ b/imaging/virtual_imaging_4D_STEM.ipynb
@@ -466,6 +466,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f65e8eb7-f079-4bb5-bd61-000d4d8e99ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tifffile.imwrite(\"vHAADF.tif\", test.ADF_stem)\n",
+    "tifffile.imwrite(\"dDPC.tif\", test.charge_density)\n",
+    "tifffile.imwrite(\"iDPC.tif\", test.potential)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "rough-ability",
    "metadata": {},
    "outputs": [],
