--- a/FEM/fem_analysis_comparison.ipynb
+++ b/FEM/fem_analysis_comparison.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_split = 1\n",
+    "num_split = 3\n",
     "adr = []\n",
     "num_adr = []\n",
     "for i in range(num_split):\n",
@@ -52,12 +52,12 @@
    "source": [
     "#rel_lmb = 0.00197 # nm, relativistic wavelength for 300 kV\n",
     "#rel_lmb = 0.00251 # nm, relativistic wavelength for 200 kV\n",
-    "k_per_pixel = 0.2079 # 1/nm\n",
+    "k_per_pixel = 0.2163 # 1/nm\n",
     "r_per_pixel = 2.4416 # nm\n",
     "\n",
-    "s_dim = 70\n",
+    "s_dim = 64\n",
     "cb_rad = 7\n",
-    "k_list = np.arange(s_dim)\n",
+    "k_list = np.arange(s_dim) * k_per_pixel\n",
     "print(k_list)"
    ]
   },
@@ -104,8 +104,6 @@
     "print(data_flat.shape)\n",
     "data_shape = np.asarray(data_shape)\n",
     "print(data_shape.shape)\n",
-    "print(np.unique(data_shape[:, :, 2]))\n",
-    "s_dim = np.min(data_shape[:, :, 2])\n",
     "print(s_dim)"
    ]
   },
@@ -165,6 +163,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "k_ranges = [[14, 16], [21, 24], [35, 36], [44, 46]]\n",
+    "for a, b in k_ranges:\n",
+    "    print(k_list[a])\n",
     "radial_var_split = []\n",
     "for i in range(num_split):\n",
     "    radial_var_split.append(np.mean(data_flat_by_split[i], axis=0))\n",
@@ -172,12 +173,65 @@
     "fig, ax = plt.subplots(1, 1, figsize=(10, 6))\n",
     "ax.tick_params(axis=\"x\", labelsize=15)\n",
     "for i in range(num_split):\n",
-    "    ax.plot(k_list, radial_var_split[i], color=color_rep[i+1], linestyle=\"-\", label=\"split %d\"%(i+1))\n",
+    "    ax.plot(radial_var_split[i], color=color_rep[i+1], linestyle=\"-\", label=\"split %d\"%(i+1))\n",
     "    print(np.max(radial_var_split[i]))\n",
+    "\n",
+    "for rg in k_ranges:\n",
+    "    ax.fill_between([rg[0], rg[1]], np.max(radial_var_split), alpha=0.5, color=\"orange\")\n",
     "ax.grid()\n",
     "fig.legend(fontsize=\"xx-large\")\n",
     "fig.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "radial_var_split = np.asarray(radial_var_split)\n",
+    "max_var = radial_var_split[:, 23]\n",
+    "print(max_var.shape)\n",
+    "\n",
+    "mean_rel_thick = [0.522105, 0.567426, 0.685723]\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "ax[0].plot(mean_rel_thick, radial_var_split[:, 23], 'k-')\n",
+    "ax[0].plot(mean_rel_thick, radial_var_split[:, 23], 'r*')\n",
+    "ax[1].plot(mean_rel_thick, radial_var_split[:, 35], 'k-')\n",
+    "ax[1].plot(mean_rel_thick, radial_var_split[:, 35], 'r*')\n",
+    "fig.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sel_range = 1\n",
+    "\n",
+    "var_imgs = []\n",
+    "max_vals = []\n",
+    "min_vals = []\n",
+    "for i in range(num_split):\n",
+    "    for arr in data_by_split[i]:\n",
+    "        tmp = np.sum(arr[:, :, k_ranges[sel_range][0]:(k_ranges[sel_range][1])], axis=2)\n",
+    "        max_vals.append(np.max(tmp))\n",
+    "        min_vals.append(np.min(tmp))\n",
+    "        var_imgs.append(tmp)\n",
+    "        \n",
+    "min_val = np.min(min_vals)\n",
+    "max_val = np.max(max_vals)\n",
+    "\n",
+    "for im in var_imgs:\n",
+    "    fig, ax = plt.subplots(1, 1)\n",
+    "    ax.imshow(im, vmin=min_val, vmax=max_val, cmap=\"inferno\")\n",
+    "    ax.axis(\"off\")\n",
+    "    fig.tight_layout()\n",
+    "    plt.show()"
    ]
   },
   {
@@ -325,9 +379,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -394,9 +445,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -621,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.13"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
