--- a/FEM/transformation_radial_avg_var.ipynb
+++ b/FEM/transformation_radial_avg_var.ipynb
@@ -237,15 +237,7 @@
     "    \n",
     "    # find the center position (center of mass)\n",
     "    mean_dp = np.mean(stack_4d, axis=(0, 1))\n",
-    "    cbox_edge = 15\n",
-    "    cbox_outy = int(mean_dp.shape[0]/2 - cbox_edge/2)\n",
-    "    cbox_outx = int(mean_dp.shape[1]/2 - cbox_edge/2)\n",
-    "    center_box = mean_dp[cbox_outy:-cbox_outy, cbox_outx:-cbox_outx]\n",
-    "    Y, X = np.indices(center_box.shape)\n",
-    "    com_y = np.sum(center_box * Y) / np.sum(center_box)\n",
-    "    com_x = np.sum(center_box * X) / np.sum(center_box)\n",
-    "    c_pos_original = [com_y+cbox_outy, com_x+cbox_outx]\n",
-    "    c_pos = [com_y+cbox_outy, com_x+cbox_outx]\n",
+    "    c_pos = [64.0, 64.0]\n",
     "    print(c_pos)\n",
     "\n",
     "    fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
@@ -279,7 +271,7 @@
     "    print(radial_avg_sum.shape)\n",
     "    \n",
     "    # save (radial average, 3D)\n",
-    "    tifffile.imsave(adr[:-4]+\"_radial_avg.tif\", radial_avg_stack)\n",
+    "    tifffile.imwrite(adr[:-4]+\"_radial_avg.tif\", radial_avg_stack)\n",
     "    \n",
     "    # calculate variance with all angles at a certain k\n",
     "    radial_var_stack = []\n",
@@ -303,7 +295,7 @@
     "    print(radial_var_sum.shape)\n",
     "    \n",
     "    # save (radial variance, 3D)\n",
-    "    tifffile.imsave(adr[:-4]+\"_radial_var.tif\", radial_var_stack)"
+    "    tifffile.imwrite(adr[:-4]+\"_radial_var.tif\", radial_var_stack)"
    ]
   },
   {
@@ -391,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
