--- a/4D-STEM_viewer.ipynb
+++ b/4D-STEM_viewer.ipynb
@@ -196,7 +196,7 @@
    "outputs": [],
    "source": [
     "# select an interesting area\n",
-    "%matplotlib qt\n",
+    "%matplotlib widget\n",
     "fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
     "ax.imshow(np.sum(stack_4d_original, axis=(2, 3)), cmap=\"gray\")\n",
     "\n",
@@ -231,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib qt\n",
+    "%matplotlib widget\n",
     "fig, ax = plt.subplots(1, 3, figsize=(15, 5))\n",
     "fig.suptitle(\"\"\"1st figure (intensity map) : arrow keys or mouse left button to move the position\n",
     "2nd figure (virtual DF image)\n",
