--- a/cepstrum/cepstral_STEM.ipynb
+++ b/cepstrum/cepstral_STEM.ipynb
@@ -8,8 +8,9 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib.patches as pch\n",
     "import tkinter.filedialog as tkf\n",
-    "import ipywidgets as pyw\n",
+    "from matplotlib.widgets import RectangleSelector\n",
     "import tifffile\n",
     "plt.rcParams['font.family'] = 'Cambria'"
    ]
@@ -142,7 +143,7 @@
     "\n",
     "    mean_dp = np.mean(img, axis=(0, 1))\n",
     "    fft2_mean = np.fft.fftshift(np.fft.fft2(np.log(mean_dp)))\n",
-    "    fft2_ = np.fft.fftshift(np.fft.fft2(np.log(img), axes=(2, 3)))\n",
+    "    fft2_ = np.fft.fftshift(np.fft.fft2(np.log(img), axes=(2, 3)), axes=(2,3))\n",
     "\n",
     "    return np.abs(fft2_), np.abs(fft2_-fft2_mean[np.newaxis, np.newaxis, :, :])"
    ]
@@ -201,11 +202,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "tifffile.imwrite(\"cepstral_transformation.tif\", ceps)\n",
+    "tifffile.imwrite(\"dcp.tif\", dcp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "yi, xi = 5, 5\n",
     "fig, ax = plt.subplots(1, 3, figsize=(15, 5))\n",
     "ax[0].imshow(stack_4d[yi, xi], cmap=\"inferno\")\n",
     "ax[1].imshow(ceps[yi, xi], cmap=\"inferno\")\n",
     "ax[2].imshow(dcp[yi, xi], cmap=\"inferno\")\n",
+    "fig.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib widget\n",
+    "fig, ax = plt.subplots(1, 3, figsize=(15, 5))\n",
+    "fig.suptitle(\"\"\"1st figure (intensity map) : arrow keys or mouse left button to move the position\n",
+    "2nd figure (virtual DF image)\n",
+    "3rd figure (diffraction image) : press 'l' key to turn on or off log-scaling / drag to make a ROI (virtual obj aperture)\"\"\")\n",
+    "\n",
+    "tracker = fourd_viewer(fig, ax, dcp)\n",
+    "\n",
+    "fig.canvas.mpl_connect(\"key_press_event\", tracker.on_press)\n",
+    "fig.canvas.mpl_connect(\"button_press_event\", tracker.on_pick)\n",
     "fig.tight_layout()\n",
     "plt.show()"
    ]
@@ -227,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4
  },
