--- a/cepstrum/cepstral_STEM.ipynb
+++ b/cepstrum/cepstral_STEM.ipynb
@@ -139,13 +139,13 @@
     "o_shape = [f_shape[0], f_shape[1], f_shape[2]+2, f_shape[3]]\n",
     "\n",
     "\n",
-    "def cepstrum_transformation(img):\n",
+    "def cepstrum_transformation(img, data_type=np.float32):\n",
     "\n",
     "    mean_dp = np.mean(img, axis=(0, 1))\n",
     "    fft2_mean = np.fft.fftshift(np.fft.fft2(np.log(mean_dp)))\n",
     "    fft2_ = np.fft.fftshift(np.fft.fft2(np.log(img), axes=(2, 3)), axes=(2,3))\n",
     "\n",
-    "    return np.abs(fft2_), np.abs(fft2_-fft2_mean[np.newaxis, np.newaxis, :, :])"
+    "    return np.abs(fft2_).astype(data_type), np.abs(fft2_-fft2_mean[np.newaxis, np.newaxis, :, :]).astype(data_type)"
    ]
   },
   {
