--- a/FEM/transformation_radial_avg_var.ipynb
+++ b/FEM/transformation_radial_avg_var.ipynb
@@ -248,6 +248,29 @@
     "                               linewidth=1, edgecolor=\"r\", facecolor=\"none\"))\n",
     "    fig.tight_layout()\n",
     "    plt.show()\n",
+    "\n",
+    "    \"\"\"\n",
+    "    mean_dp = np.mean(stack_4d, axis=(0, 1))\n",
+    "    cbox_edge = 15\n",
+    "    cbox_outy = int(mean_dp.shape[0]/2 - cbox_edge/2)\n",
+    "    cbox_outx = int(mean_dp.shape[1]/2 - cbox_edge/2)\n",
+    "    center_box = mean_dp[cbox_outy:-cbox_outy, cbox_outx:-cbox_outx]\n",
+    "    Y, X = np.indices(center_box.shape)\n",
+    "    com_y = np.sum(center_box * Y) / np.sum(center_box)\n",
+    "    com_x = np.sum(center_box * X) / np.sum(center_box)\n",
+    "    c_pos_original = [com_y+cbox_outy, com_x+cbox_outx]\n",
+    "    c_pos = [com_y+cbox_outy, com_x+cbox_outx]\n",
+    "    print(c_pos)\n",
+    "\n",
+    "    fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
+    "    ax.imshow(mean_dp, cmap=\"gray\")\n",
+    "    ax.axis(\"off\")\n",
+    "    ax.scatter(c_pos[1], c_pos[0], s=15, c=\"r\")\n",
+    "    ax.add_patch(pch.Rectangle((cbox_outx, cbox_outy), cbox_edge, cbox_edge, \n",
+    "                               linewidth=1, edgecolor=\"r\", facecolor=\"none\"))\n",
+    "    fig.tight_layout()\n",
+    "    plt.show()\n",
+    "    \"\"\"\n",
     "    \n",
     "    # radial average of DPs (not variance, intensity direcltly, RDF?)\n",
     "    radial_avg_stack = []\n",
