--- a/cepstrum/cepstral_STEM.ipynb
+++ b/cepstrum/cepstral_STEM.ipynb
@@ -135,7 +135,7 @@
     "    return stack\n",
     "\n",
     "datatype = \"float32\"\n",
-    "f_shape = [256, 256, 128, 128] # the shape of the 4D-STEM data [scanning_y, scanning_x, DP_y, DP_x]\n",
+    "f_shape = [128, 128, 128, 128] # the shape of the 4D-STEM data [scanning_y, scanning_x, DP_y, DP_x]\n",
     "o_shape = [f_shape[0], f_shape[1], f_shape[2]+2, f_shape[3]]\n",
     "\n",
     "\n",
@@ -143,7 +143,7 @@
     "\n",
     "    mean_dp = np.mean(img, axis=(0, 1))\n",
     "    fft2_mean = np.fft.fftshift(np.fft.fft2(np.log(mean_dp)))\n",
-    "    fft2_ = np.fft.fftshift(np.fft.fft2(np.log(img), axes=(2, 3)), axes=(2,3))\n",
+    "    fft2_ = np.fft.fftshift(np.fft.fft2(np.log(img.astype(data_type)), axes=(2, 3)), axes=(2,3))\n",
     "\n",
     "    return np.abs(fft2_).astype(data_type), np.abs(fft2_-fft2_mean[np.newaxis, np.newaxis, :, :]).astype(data_type)"
    ]
@@ -258,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.7.16"
   },
   "orig_nbformat": 4
  },
