--- a/imaging/virtual_imaging_4D_STEM.ipynb
+++ b/imaging/virtual_imaging_4D_STEM.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "popular-optimization",
    "metadata": {},
@@ -129,9 +130,9 @@
     "        Savitzky, B.H., et al., arXiv preprint arXiv:2003.09523, 2020. (https://github.com/py4dstem/py4DSTEM)\n",
     "        \"\"\"\n",
     "        \n",
-    "        Y, X = np.indices(test.c_pacbed.shape)\n",
-    "        self.ysh = np.sum(test.c_stack * Y, axis=(2, 3)) / np.sum(test.c_stack, axis=(2, 3)) - test.c_ct[0]\n",
-    "        self.xsh = np.sum(test.c_stack * X, axis=(2, 3)) / np.sum(test.c_stack, axis=(2, 3)) - test.c_ct[1]\n",
+    "        Y, X = np.indices(self.c_pacbed.shape)\n",
+    "        self.ysh = np.sum(self.c_stack * Y, axis=(2, 3)) / np.sum(self.c_stack, axis=(2, 3)) - self.c_ct[0]\n",
+    "        self.xsh = np.sum(self.c_stack * X, axis=(2, 3)) / np.sum(self.c_stack, axis=(2, 3)) - self.c_ct[1]\n",
     "        \n",
     "        self.ysh -= np.mean(self.ysh)\n",
     "        self.xsh -= np.mean(self.xsh)\n",
@@ -255,7 +256,7 @@
     "import matplotlib.colors as mcolors\n",
     "import tkinter.filedialog as tkf\n",
     "import time\n",
-    "plt.rcParams['font.family'] = 'Times New Roman'"
+    "plt.rcParams['font.family'] = 'Cambria'"
    ]
   },
   {
@@ -269,7 +270,7 @@
     "print(raw_adr)\n",
     "\n",
     "datatype = \"float32\"\n",
-    "f_shape = [256, 64, 128, 128] # the shape of the 4D-STEM data [scanning_y, scanning_x, DP_y, DP_x]\n",
+    "f_shape = [256, 256, 128, 128] # the shape of the 4D-STEM data [scanning_y, scanning_x, DP_y, DP_x]\n",
     "o_shape = [f_shape[0], f_shape[1], f_shape[2]+2, f_shape[3]]"
    ]
   },
@@ -305,9 +306,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "semiangle = 20 # mrad\n",
-    "scan_per_pixel = 1\n",
-    "mrad_per_pixel = 1\n",
+    "scan_per_pixel = 0.11272 # Å\n",
+    "mrad_per_pixel = 0.40877 # mrad\n",
     "test = sstem_python(f_stack, scan_per_pixel, mrad_per_pixel)\n",
     "\n",
     "fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
@@ -389,6 +389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "semiangle = test.least_R*mrad_per_pixel\n",
     "BF_det = np.array([0, semiangle])\n",
     "ADF_det = np.array([semiangle, semiangle*2])\n",
     "\n",
@@ -569,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
