--- a/imaging/virtual_imaging_4D_STEM.ipynb
+++ b/imaging/virtual_imaging_4D_STEM.ipynb
@@ -38,10 +38,16 @@
     "        \n",
     "        self.intensity_integration_map = np.sum(f_stack, axis=(2, 3))\n",
     "        \n",
-    "    def spike_remove(self, percent_thresh, apply_remove=False):\n",
+    "    def spike_remove(self, percent_thresh, mode, apply_remove=False):\n",
     "        threshold = np.percentile(self.intensity_integration_map, percent_thresh)\n",
-    "        spike_ind = np.where(self.intensity_integration_map > threshold)\n",
-    "        \n",
+    "        if mode == \"upper\":\n",
+    "            spike_ind = np.where(self.intensity_integration_map > threshold)\n",
+    "        elif mode == \"lower\":\n",
+    "            spike_ind = np.where(self.intensity_integration_map < threshold)\n",
+    "        else:\n",
+    "            print(\"Wrong mode!\")\n",
+    "            return\n",
+    "\n",
     "        print(\"threshold value = %f\"%threshold)\n",
     "        print(\"number of abnormal pixels = %d\"%len(spike_ind[0]))\n",
     "        \n",
@@ -308,7 +314,7 @@
    "source": [
     "scan_per_pixel = 0.11272 # Å\n",
     "mrad_per_pixel = 0.40877 # mrad\n",
-    "test = sstem_python(f_stack, scan_per_pixel, mrad_per_pixel)\n",
+    "test = sstem_python(f_stack.copy(), scan_per_pixel, mrad_per_pixel)\n",
     "\n",
     "fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
     "ax.imshow(test.intensity_integration_map, cmap=\"inferno\")\n",
@@ -323,7 +329,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test.spike_remove(percent_thresh=99.9, apply_remove=True)\n",
+    "test.spike_remove(percent_thresh=99.9, mode=\"upper\", apply_remove=True)\n",
     "\n",
     "fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
     "ax.imshow(test.spike_replaced, cmap=\"inferno\")\n",
