--- a/ptychography/abTEM/rpie_abTEM.ipynb
+++ b/ptychography/abTEM/rpie_abTEM.ipynb
@@ -291,12 +291,13 @@
    "outputs": [],
    "source": [
     "n_iter = 20\n",
+    "n_probe = 5\n",
     "Mixed_operator = MixedStatePtychographicOperator(experimental_measurement,\n",
-    "                                                               num_probes=2,\n",
+    "                                                               num_probes=n_probe,\n",
     "                                                               semiangle_cutoff=semiangle,\n",
     "                                                               energy=energy,\n",
-    "                                                               device='gpu',\n",
-    "                                                               parameters={'object_px_padding':(16, 16)}).preprocess()\n",
+    "                                                               device=device,\n",
+    "                                                               parameters={'object_px_padding':(0,0 )}).preprocess()\n",
     "\n",
     "exp_objects, exp_probes, exp_positions, exp_sse  = Mixed_operator.reconstruct(\n",
     "    max_iterations = n_iter,\n",
@@ -307,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04fa2418",
+   "id": "f311de97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,14 +316,18 @@
     "for i in range(exp_objects[-1].dimensions):\n",
     "    print(exp_objects[-1].calibrations[i].name, exp_objects[-1].calibrations[i].units,\n",
     "          exp_objects[-1].calibrations[i].sampling)\n",
-    "    \n",
-    "probe_intensity_ratios  = np.sum([probe.intensity().array for probe in exp_probes[-1]],axis=(-2,-1))\n",
-    "probe_intensity_ratios /= np.sum(probe_intensity_ratios)/100\n",
     "\n",
-    "fig, axd = plt.subplot_mosaic([['left', 'top-right'],['left', 'bottom-right']], figsize=(12, 7))\n",
-    "exp_objects[-1].angle().show(ax=axd['left'],title=f\"SSE = {float(exp_sse[-1]):.3e}\",cmap='magma')\n",
-    "exp_probes[-1][0].intensity().show(ax=axd['top-right'],title=f'Probe 0 Intensity: {probe_intensity_ratios[0]:.2f}%')\n",
-    "exp_probes[-1][1].intensity().show(ax=axd['bottom-right'],title=f'Probe 1 Intensity: {probe_intensity_ratios[1]:.2f}%')\n",
+    "fig, axes = plt.subplots(1, int(np.ceil(len(exp_objects) / plot_every))+1, figsize=(20, 8))\n",
+    "\n",
+    "for i, j in enumerate(range(0,len(exp_objects), plot_every)):\n",
+    "    axes[i].imshow(np.angle(exp_objects[j].array).T, origin='lower', cmap='gray')\n",
+    "    axes[i].set_title('iteration: %d, SSE: %.2e'%(j+1, exp_sse[j]))\n",
+    "    axes[i].axis(\"off\")\n",
+    "\n",
+    "axes[-1].imshow(np.angle(exp_objects[-1].array).T, origin='lower', cmap='gray')\n",
+    "axes[-1].set_title('iteration: %d, SSE: %.2e'%(n_iter, exp_sse[-1]))\n",
+    "axes[-1].axis(\"off\")\n",
+    "\n",
     "fig.tight_layout()\n",
     "plt.show()"
    ]
@@ -338,6 +343,13 @@
     "ax.imshow(np.angle(exp_objects[-1].array).T[:int(recon_shape[0]*recon_extent_x_ratio), :int(recon_shape[1]*recon_extent_y_ratio)], \n",
     "          cmap='inferno', origin=\"lower\",\n",
     "          extent=[0, experimental_measurement.calibration_limits[0][1], 0, experimental_measurement.calibration_limits[1][1]])\n",
+    "fig.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "fig, ax = plt.subplots(1, n_probe, figsize=(5*n_probe, 3))\n",
+    "for i in range(n_probe):\n",
+    "    ax[i].imshow(np.abs(exp_probes[-1][i].array).T**2, origin=\"lower\", cmap=\"gray\")\n",
+    "    ax[i].axis(\"off\")\n",
     "fig.tight_layout()\n",
     "plt.show()"
    ]
