--- a/RDF/RDF_analysis_SADP.ipynb
+++ b/RDF/RDF_analysis_SADP.ipynb
@@ -17,10 +17,32 @@
     "import tifffile\n",
     "from scipy import ndimage\n",
     "import ipywidgets as pyw\n",
+    "from py4DSTEM.process.utils import single_atom_scatter\n",
+    "\n",
     "plt.rcParams['font.family'] = 'Times New Roman'\n",
     "color_rep = [\"black\", \"orange\", \"purple\", \"blue\", \"red\", \"green\", \"yellow\", \"lime\", \n",
     "             \"cyan\", \"magenta\", \"lightgray\", \"peru\", \"springgreen\", \"deepskyblue\", \n",
     "             \"hotpink\", \"darkgray\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8946c13f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Fst_AF = single_atom_scatter(elements=[31], composition=[1.0], q_coords=np.arange(0, 0.023322*1024, 0.023322), units='A')\n",
+    "Fst_AF.get_scattering_factor()\n",
+    "Fst_AFF = Fst_AF.fe\n",
+    "\n",
+    "Snd_AF = single_atom_scatter(elements=[8], composition=[1.0], q_coords=np.arange(0, 0.023322*1024, 0.023322), units='A')\n",
+    "Snd_AF.get_scattering_factor()\n",
+    "Snd_AFF = Snd_AF.fe\n",
+    "\n",
+    "composition = [0.5, 0.5]\n",
+    "AF_mean_square = (Fst_AFF*composition[0] + Snd_AFF*composition[1])**2\n",
+    "AF_square_mean = Fst_AFF**2*composition[0] + Snd_AFF**2*composition[1]"
    ]
   },
   {
@@ -45,27 +67,28 @@
    },
    "outputs": [],
    "source": [
-    "lim_dim = 800\n",
+    "lim_dim = 900\n",
     "\n",
-    "Si_AF_sqr = tifffile.imread(\"./setting/AFFs_300keV/14_Silicon_300keV_fs_square_0.005A.tif\").squeeze()\n",
-    "Si_AF_sqr = Si_AF_sqr[:lim_dim]\n",
-    "Si_AF = np.sqrt(Si_AF_sqr)\n",
+    "Fst_AF_sqr = tifffile.imread(\"./setting/AFFs/200keV_31_Ga_fs_square.tif\").squeeze()\n",
+    "print(Fst_AF_sqr.shape)\n",
+    "Fst_AF_sqr = Fst_AF_sqr[:lim_dim]\n",
+    "Fst_AF = np.sqrt(Fst_AF_sqr)\n",
     "\n",
-    "O_AF_sqr = tifffile.imread(\"./setting/AFFs_300keV/08_Oxygen_300keV_fs_square_0.005A.tif\").squeeze()\n",
-    "O_AF_sqr = O_AF_sqr[:lim_dim]\n",
-    "O_AF = np.sqrt(O_AF_sqr)\n",
+    "Snd_AF_sqr = tifffile.imread(\"./setting/AFFs/200keV_08_O_fs_square.tif\").squeeze()\n",
+    "print(Snd_AF_sqr.shape)\n",
+    "Snd_AF_sqr = Snd_AF_sqr[:lim_dim]\n",
+    "Snd_AF = np.sqrt(Snd_AF_sqr)\n",
     "\n",
-    "tmp = np.max(Si_AF)\n",
-    "Si_AF /= tmp\n",
-    "O_AF /= tmp\n",
+    "Fst_AF /= np.max(Fst_AF)\n",
+    "Snd_AF /= np.max(Snd_AF)\n",
     "\n",
-    "print(np.max(Si_AF), np.max(O_AF))\n",
+    "print(np.max(Fst_AF), np.max(Snd_AF))\n",
     "\n",
-    "Si_atp = 1/3\n",
-    "O_atp = 2/3\n",
+    "Fst_atp = 1/2\n",
+    "Snd_atp = 1/2\n",
     "\n",
     "k_scale = 0.005 # Angstrom\n",
-    "s = np.arange(0, k_scale*len(Si_AF), k_scale)[:lim_dim]\n",
+    "s = np.arange(0, k_scale*len(Fst_AF), k_scale)[:lim_dim]\n",
     "print(len(s), s[-1])"
    ]
   },
@@ -76,8 +99,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_adr = tkf.askopenfilename()\n",
-    "print(raw_adr)"
+    "raw_adr = tkf.askopenfilenames()\n",
+    "print(*raw_adr, sep=\"\\n\")"
    ]
   },
   {
@@ -88,7 +111,11 @@
    "outputs": [],
    "source": [
     "# Load a data\n",
-    "rot_dp = tifffile.imread(raw_adr)\n",
+    "rot_dp = []\n",
+    "for i in range(len(raw_adr)):\n",
+    "    rot_dp.append(tifffile.imread(raw_adr[i]).reshape(1, -1))\n",
+    "\n",
+    "rot_dp = np.asarray(rot_dp)\n",
     "print(rot_dp.shape)\n",
     "rot_dp_data = rot_dp.copy()\n",
     "print(rot_dp_data.shape)\n",
@@ -103,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scale = [0.4325, 0.4325, 0.02677]\n",
+    "scale = [1.0, 1.0, 0.0023322]\n",
     "origin = [0, 0, 0]\n",
     "unit = ['nm', 'nm', '1/A']\n",
     "size = rot_dp_data.shape"
@@ -141,19 +168,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interpolation = interp1d(s, Si_AF, kind=\"cubic\")\n",
-    "NSi_AF = interpolation(k_list)\n",
+    "interpolation = interp1d(s, Fst_AF, kind=\"cubic\")\n",
+    "NFst_AF = interpolation(k_list)\n",
     "\n",
-    "interpolation = interp1d(s, O_AF, kind=\"cubic\")\n",
-    "NO_AF = interpolation(k_list)\n",
+    "interpolation = interp1d(s, Snd_AF, kind=\"cubic\")\n",
+    "NSnd_AF = interpolation(k_list)\n",
     "\n",
-    "AF_mean = (NSi_AF*Si_atp +  NO_AF*O_atp)\n",
+    "AF_mean = (NFst_AF*Fst_atp +  NSnd_AF*Snd_atp)\n",
     "print(len(AF_mean))\n",
     "\n",
     "AF_mean_square = AF_mean**2\n",
     "print(len(AF_mean_square))\n",
     "\n",
-    "AF_square_mean = NSi_AF*Si_atp**2 + NO_AF*O_atp**2\n",
+    "AF_square_mean = NFst_AF*Fst_atp**2 + NSnd_AF*Snd_atp**2\n",
     "print(len(AF_square_mean))"
    ]
   },
@@ -166,36 +193,6 @@
    "source": [
     "AF_mean_square = AF_mean_square[:size[n_dim-1]]\n",
     "AF_square_mean = AF_square_mean[:size[n_dim-1]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1706eb71-e0fb-46e2-ba6f-a2d0a378b34f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "142f5aaf-169c-4bef-96b7-cf30a4937e97",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib widget"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52a92f42-2026-4055-a638-1efd21579b38",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib qt"
    ]
   },
   {
@@ -270,7 +267,7 @@
     "fig, ax = plt.subplots(2, 2, figsize=(8, 5))\n",
     "int_img = np.sum(rot_dp_data, axis=2)\n",
     "\n",
-    "def RDF_4DSTEM(yp, xp, aph, fit_range, ln, ln_check, f_n, f_c, full_check):\n",
+    "def RDF_4DSTEM(yp, xp, aph, fit_range, ln, ln_check, f_n, f_lc, f_c, full_check):\n",
     "    \n",
     "    for a in ax.flat:\n",
     "        a.cla()\n",
@@ -280,6 +277,7 @@
     "    ax[0][0].scatter(xp, yp, c=\"red\", s=15)\n",
     "    \n",
     "    filt = damp[f_n].copy()\n",
+    "    filt[:int(f_lc*len(filt))] = 0\n",
     "    filt[int(f_c*len(filt)):] = 0\n",
     "    print(filter_types[f_n])\n",
     "    ind = np.linspace(0, len(filt)-1, size[n_dim-1]).astype(np.int16)\n",
@@ -287,7 +285,7 @@
     "    rot_dp_tmp = rot_dp_data[yp, xp]\n",
     "    \n",
     "    if ln_check:\n",
-    "        rgr_ridge.fit(AF_mean_square[fit_range[0]:fit_range[1]].reshape(-1, 1), rot_dp_tmp[fit_range[0]:fit_range[1]].reshape(-1, 1))\n",
+    "        rgr_ridge.fit(AF_mean_square[fit_range[0]:fit_range[1]].reshape(-1, 1)+aph, rot_dp_tmp[fit_range[0]:fit_range[1]].reshape(-1, 1))\n",
     "        print(\"fitted N value = %f\"%rgr_ridge.coef_[0][0])\n",
     "        ln = rgr_ridge.coef_[0][0]\n",
     "    \n",
@@ -297,7 +295,7 @@
     "    \n",
     "    ax[0][1].plot(k_list, rot_dp_tmp, 'k-')\n",
     "    ax[0][1].plot(k_list, Nfs_tmp, 'r-')\n",
-    "    ax[0][1].set_ylim(ymin=0.0, ymax=0.002)\n",
+    "    ax[0][1].set_ylim(ymin=0.0, ymax=0.5)\n",
     "    ax[0][1].fill_between([k_list[fit_range[0]], k_list[fit_range[1]]], np.max(rot_dp_tmp), alpha=0.5, color=\"orange\")\n",
     "    ax[0][1].grid()\n",
     "    ax[1][0].plot(k_list, rif_tmp, 'k-')\n",
@@ -314,19 +312,20 @@
     "    fig.tight_layout()\n",
     "    \n",
     "st = {\"description_width\": \"initial\"}\n",
-    "y_wg = pyw.BoundedIntText(value=0, min=0, max=size[1]-1, description=\"y position\", style=st)\n",
-    "x_wg = pyw.BoundedIntText(value=0, min=0, max=size[0]-1, description=\"x position\", style=st)\n",
-    "N_wg = pyw.BoundedFloatText(value=1.0, min=0.0001, step=0.0001, description=\"N\", style=st)\n",
+    "y_wg = pyw.BoundedIntText(value=0, min=0, max=size[0]-1, description=\"y position\", style=st)\n",
+    "x_wg = pyw.BoundedIntText(value=0, min=0, max=size[1]-1, description=\"x position\", style=st)\n",
+    "N_wg = pyw.FloatText(value=1.0, step=0.01, description=\"N\", style=st)\n",
     "N_manual = pyw.Checkbox(value=True, description=\"use the fitted value of N\")\n",
-    "fit_range_wg = pyw.IntRangeSlider(value=[70, 80], \n",
-    "                                  min=40, max=size[n_dim-1]-1, description=\"N fitting range\")\n",
+    "fit_range_wg = pyw.IntRangeSlider(value=[int(0.9*len(k_list)), len(k_list)], \n",
+    "                                  min=1, max=size[n_dim-1]-1, description=\"N fitting range\")\n",
     "alpha_wg = pyw.FloatText(value=0.0, step=0.0001, description=\"alpha\", style=st)\n",
     "filter_wg = pyw.BoundedIntText(value=0, min=0, max=len(filter_types)-1, description=\"filter\", style=st)\n",
-    "filter_cut_wg = pyw.BoundedFloatText(value=0.8, min=0.0, max=1.0, step=0.05, description=\"filter high cut\", style=st)\n",
+    "filter_low_wg = pyw.BoundedFloatText(value=0.05, min=0.0, max=1.0, step=0.01, description=\"filter low cut\", style=st)\n",
+    "filter_cut_wg = pyw.BoundedFloatText(value=0.8, min=0.0, max=1.0, step=0.01, description=\"filter high cut\", style=st)\n",
     "full_wg = pyw.Checkbox(value=True, description=\"show the full range of RDF\")\n",
     "\n",
     "pyw.interact(RDF_4DSTEM, yp=y_wg, xp=x_wg, aph=alpha_wg, fit_range=fit_range_wg, \n",
-    "             ln=N_wg, ln_check=N_manual, f_n=filter_wg, f_c=filter_cut_wg, full_check=full_wg)\n",
+    "             ln=N_wg, ln_check=N_manual, f_n=filter_wg, f_lc=filter_low_wg, f_c=filter_cut_wg, full_check=full_wg)\n",
     "plt.show()"
    ]
   },
@@ -382,26 +381,6 @@
    "outputs": [],
    "source": [
     "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "166f83a0-9f92-4f02-be85-14e418a4f52d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib widget"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a6a909e-8a21-4c58-b98e-4f7886c8bb59",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib qt"
    ]
   },
   {
@@ -474,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
