--- a/RDF/RDF_analysis_4DSTEM.ipynb
+++ b/RDF/RDF_analysis_4DSTEM.ipynb
@@ -17,10 +17,32 @@
     "import tifffile\n",
     "from scipy import ndimage\n",
     "import ipywidgets as pyw\n",
+    "from py4DSTEM.process.utils import single_atom_scatter\n",
+    "\n",
     "plt.rcParams['font.family'] = 'Times New Roman'\n",
     "color_rep = [\"black\", \"orange\", \"purple\", \"blue\", \"red\", \"green\", \"yellow\", \"lime\", \n",
     "             \"cyan\", \"magenta\", \"lightgray\", \"peru\", \"springgreen\", \"deepskyblue\", \n",
     "             \"hotpink\", \"darkgray\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8946c13f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Fst_AF = single_atom_scatter(elements=[31], composition=[1.0], q_coords=np.arange(0, 0.023322*1024, 0.023322), units='A')\n",
+    "Fst_AF.get_scattering_factor()\n",
+    "Fst_AFF = Fst_AF.fe\n",
+    "\n",
+    "Snd_AF = single_atom_scatter(elements=[8], composition=[1.0], q_coords=np.arange(0, 0.023322*1024, 0.023322), units='A')\n",
+    "Snd_AF.get_scattering_factor()\n",
+    "Snd_AFF = Snd_AF.fe\n",
+    "\n",
+    "composition = [0.5, 0.5]\n",
+    "AF_mean_square = (Fst_AFF*composition[0] + Snd_AFF*composition[1])**2\n",
+    "AF_square_mean = Fst_AFF**2*composition[0] + Snd_AFF**2*composition[1]"
    ]
   },
   {
@@ -45,22 +67,29 @@
    },
    "outputs": [],
    "source": [
-    "B_AF_sqr = tifffile.imread(\"./setting/AFFs_300keV/05_Boron_300keV_fs_square_0.005A.tif\").squeeze()\n",
-    "B_AF = np.sqrt(B_AF_sqr)\n",
-    "B_AF /= np.max(B_AF)\n",
-    "C_AF_sqr = tifffile.imread(\"./setting/AFFs_300keV/06_Carbon_300keV_fs_square_0.005A.tif\").squeeze()\n",
-    "C_AF = np.sqrt(C_AF_sqr)\n",
-    "C_AF /= np.max(C_AF)\n",
-    "N_AF_sqr = tifffile.imread(\"./setting/AFFs_300keV/07_Nitrogen_300keV_fs_square_0.005A.tif\").squeeze()\n",
-    "N_AF = np.sqrt(N_AF_sqr)\n",
-    "N_AF /= np.max(N_AF)\n",
-    "O_AF_sqr = tifffile.imread(\"./setting/AFFs_300keV/08_Oxygen_300keV_fs_square_0.005A.tif\").squeeze()\n",
-    "O_AF = np.sqrt(O_AF_sqr)\n",
-    "O_AF /= np.max(O_AF)\n",
+    "lim_dim = 900\n",
+    "\n",
+    "Fst_AF_sqr = tifffile.imread(\"./setting/AFFs/200keV_31_Ga_fs_square.tif\").squeeze()\n",
+    "print(Fst_AF_sqr.shape)\n",
+    "Fst_AF_sqr = Fst_AF_sqr[:lim_dim]\n",
+    "Fst_AF = np.sqrt(Fst_AF_sqr)\n",
+    "\n",
+    "Snd_AF_sqr = tifffile.imread(\"./setting/AFFs/200keV_08_O_fs_square.tif\").squeeze()\n",
+    "print(Snd_AF_sqr.shape)\n",
+    "Snd_AF_sqr = Snd_AF_sqr[:lim_dim]\n",
+    "Snd_AF = np.sqrt(Snd_AF_sqr)\n",
+    "\n",
+    "Fst_AF /= np.max(Fst_AF)\n",
+    "Snd_AF /= np.max(Snd_AF)\n",
+    "\n",
+    "print(np.max(Fst_AF), np.max(Snd_AF))\n",
+    "\n",
+    "Fst_atp = 1/2\n",
+    "Snd_atp = 1/2\n",
     "\n",
     "k_scale = 0.005 # Angstrom\n",
-    "s = np.arange(0, k_scale*len(B_AF), k_scale)\n",
-    "print(len(s))"
+    "s = np.arange(0, k_scale*len(Fst_AF), k_scale)[:lim_dim]\n",
+    "print(len(s), s[-1])"
    ]
   },
   {
@@ -71,7 +100,7 @@
    "outputs": [],
    "source": [
     "raw_adr = tkf.askopenfilename()\n",
-    "print(raw_adr)"
+    "print(*raw_adr, sep=\"\\n\")"
    ]
   },
   {
@@ -97,10 +126,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scale = [0.2701, 0.2701, 0.01722]\n",
+    "scale = [1.0, 1.0, 0.0023322]\n",
     "origin = [0, 0, 0]\n",
     "unit = ['nm', 'nm', '1/A']\n",
-    "size = [128, 128, 90]"
+    "size = rot_dp_data.shape"
    ]
   },
   {
@@ -135,29 +164,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interpolation = interp1d(s, B_AF, kind=\"cubic\")\n",
-    "NB_AF = interpolation(k_list)\n",
-    "NB_AF /= np.max(NB_AF)\n",
+    "interpolation = interp1d(s, Fst_AF, kind=\"cubic\")\n",
+    "NFst_AF = interpolation(k_list)\n",
     "\n",
-    "interpolation = interp1d(s, C_AF, kind=\"cubic\")\n",
-    "NC_AF = interpolation(k_list)\n",
-    "NC_AF /= np.max(NC_AF)\n",
+    "interpolation = interp1d(s, Snd_AF, kind=\"cubic\")\n",
+    "NSnd_AF = interpolation(k_list)\n",
     "\n",
-    "interpolation = interp1d(s, N_AF, kind=\"cubic\")\n",
-    "NN_AF = interpolation(k_list)\n",
-    "NN_AF /= np.max(NN_AF)\n",
-    "\n",
-    "interpolation = interp1d(s, O_AF, kind=\"cubic\")\n",
-    "NO_AF = interpolation(k_list)\n",
-    "NO_AF /= np.max(NO_AF)\n",
-    "\n",
-    "AF_mean = NB_AF*B_atp + NC_AF*C_atp + NN_AF*N_atp + NO_AF*O_atp\n",
+    "AF_mean = (NFst_AF*Fst_atp +  NSnd_AF*Snd_atp)\n",
     "print(len(AF_mean))\n",
     "\n",
     "AF_mean_square = AF_mean**2\n",
     "print(len(AF_mean_square))\n",
     "\n",
-    "AF_square_mean = (NB_AF*B_atp)**2 + (NC_AF*C_atp)**2 + (NN_AF*N_atp)**2 + (NO_AF*O_atp)**2\n",
+    "AF_square_mean = NFst_AF*Fst_atp**2 + NSnd_AF*Snd_atp**2\n",
     "print(len(AF_square_mean))"
    ]
   },
@@ -175,42 +194,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1706eb71-e0fb-46e2-ba6f-a2d0a378b34f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "142f5aaf-169c-4bef-96b7-cf30a4937e97",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib widget"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52a92f42-2026-4055-a638-1efd21579b38",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib qt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "4d0bec49-e8b4-4baa-8933-6853865af0d3",
    "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(8, 6))\n",
-    "\n",
     "ax.plot(k_list, np.mean(rot_dp_data, axis=(0, 1)), 'k-')\n",
     "ax.plot(k_list, AF_mean_square, 'r-')\n",
     "ax.plot(k_list, AF_square_mean, 'g+')\n",
@@ -275,7 +263,7 @@
     "fig, ax = plt.subplots(2, 2, figsize=(8, 5))\n",
     "int_img = np.sum(rot_dp_data, axis=2)\n",
     "\n",
-    "def RDF_4DSTEM(yp, xp, aph, fit_range, ln, ln_check, f_n, f_c, full_check):\n",
+    "def RDF_4DSTEM(yp, xp, aph, fit_range, ln, ln_check, f_n, f_lc, f_c, full_check):\n",
     "    \n",
     "    for a in ax.flat:\n",
     "        a.cla()\n",
@@ -285,6 +273,7 @@
     "    ax[0][0].scatter(xp, yp, c=\"red\", s=15)\n",
     "    \n",
     "    filt = damp[f_n].copy()\n",
+    "    filt[:int(f_lc*len(filt))] = 0\n",
     "    filt[int(f_c*len(filt)):] = 0\n",
     "    print(filter_types[f_n])\n",
     "    ind = np.linspace(0, len(filt)-1, size[n_dim-1]).astype(np.int16)\n",
@@ -292,7 +281,7 @@
     "    rot_dp_tmp = rot_dp_data[yp, xp]\n",
     "    \n",
     "    if ln_check:\n",
-    "        rgr_ridge.fit(AF_mean_square[fit_range[0]:fit_range[1]].reshape(-1, 1), rot_dp_tmp[fit_range[0]:fit_range[1]].reshape(-1, 1))\n",
+    "        rgr_ridge.fit(AF_mean_square[fit_range[0]:fit_range[1]].reshape(-1, 1)+aph, rot_dp_tmp[fit_range[0]:fit_range[1]].reshape(-1, 1))\n",
     "        print(\"fitted N value = %f\"%rgr_ridge.coef_[0][0])\n",
     "        ln = rgr_ridge.coef_[0][0]\n",
     "    \n",
@@ -302,7 +291,7 @@
     "    \n",
     "    ax[0][1].plot(k_list, rot_dp_tmp, 'k-')\n",
     "    ax[0][1].plot(k_list, Nfs_tmp, 'r-')\n",
-    "    ax[0][1].set_ylim(ymin=0.0, ymax=0.002)\n",
+    "    ax[0][1].set_ylim(ymin=0.0, ymax=0.5)\n",
     "    ax[0][1].fill_between([k_list[fit_range[0]], k_list[fit_range[1]]], np.max(rot_dp_tmp), alpha=0.5, color=\"orange\")\n",
     "    ax[0][1].grid()\n",
     "    ax[1][0].plot(k_list, rif_tmp, 'k-')\n",
@@ -319,19 +308,20 @@
     "    fig.tight_layout()\n",
     "    \n",
     "st = {\"description_width\": \"initial\"}\n",
-    "y_wg = pyw.BoundedIntText(value=0, min=0, max=size[1]-1, description=\"y position\", style=st)\n",
-    "x_wg = pyw.BoundedIntText(value=0, min=0, max=size[0]-1, description=\"x position\", style=st)\n",
-    "N_wg = pyw.BoundedFloatText(value=1.0, min=0.00001, step=0.001, description=\"N\", style=st)\n",
+    "y_wg = pyw.BoundedIntText(value=0, min=0, max=size[0]-1, description=\"y position\", style=st)\n",
+    "x_wg = pyw.BoundedIntText(value=0, min=0, max=size[1]-1, description=\"x position\", style=st)\n",
+    "N_wg = pyw.FloatText(value=1.0, step=0.01, description=\"N\", style=st)\n",
     "N_manual = pyw.Checkbox(value=True, description=\"use the fitted value of N\")\n",
-    "fit_range_wg = pyw.IntRangeSlider(value=[70, 80], \n",
-    "                                  min=40, max=size[n_dim-1]-1, description=\"N fitting range\")\n",
-    "alpha_wg = pyw.FloatText(value=0.0, step=0.000001, description=\"alpha\", style=st)\n",
+    "fit_range_wg = pyw.IntRangeSlider(value=[int(0.9*len(k_list)), len(k_list)], \n",
+    "                                  min=1, max=size[n_dim-1]-1, description=\"N fitting range\")\n",
+    "alpha_wg = pyw.FloatText(value=0.0, step=0.0001, description=\"alpha\", style=st)\n",
     "filter_wg = pyw.BoundedIntText(value=0, min=0, max=len(filter_types)-1, description=\"filter\", style=st)\n",
-    "filter_cut_wg = pyw.BoundedFloatText(value=0.8, min=0.0, max=1.0, step=0.05, description=\"filter high cut\", style=st)\n",
+    "filter_low_wg = pyw.BoundedFloatText(value=0.05, min=0.0, max=1.0, step=0.01, description=\"filter low cut\", style=st)\n",
+    "filter_cut_wg = pyw.BoundedFloatText(value=0.8, min=0.0, max=1.0, step=0.01, description=\"filter high cut\", style=st)\n",
     "full_wg = pyw.Checkbox(value=True, description=\"show the full range of RDF\")\n",
     "\n",
     "pyw.interact(RDF_4DSTEM, yp=y_wg, xp=x_wg, aph=alpha_wg, fit_range=fit_range_wg, \n",
-    "             ln=N_wg, ln_check=N_manual, f_n=filter_wg, f_c=filter_cut_wg, full_check=full_wg)\n",
+    "             ln=N_wg, ln_check=N_manual, f_n=filter_wg, f_lc=filter_low_wg, f_c=filter_cut_wg, full_check=full_wg)\n",
     "plt.show()"
    ]
   },
@@ -387,26 +377,6 @@
    "outputs": [],
    "source": [
     "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "166f83a0-9f92-4f02-be85-14e418a4f52d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib widget"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a6a909e-8a21-4c58-b98e-4f7886c8bb59",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib qt"
    ]
   },
   {
@@ -479,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
